--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                 <a href="/">Courtney Spisak</a>
             </div>
 
-            <div class="col-4">
+            <div class="col-3">
                 <a href="mailto:email@gmail.com">Contact&#8594; courtney.spisak@sjsu.edu
                 </a>
             </div>
 
-            <div class="col-4">
+            <div class="col-3">
                 <!--a href="https://www.instagram.com">Instagram &#8599;</a>-->
             </div>
         </div>
 
        <br/>
         <div class="row">
-          <div class="col-4">
+          <div class="col-3">
            
                 <div class="project_card">
                     <a href="project1.html">
@@ -40,57 +40,68 @@
           </div>
           <div class="col-4">
             <div class="project_card">
+                <a href="project2.html">
                 <img class="homepage_project_image" src="images/project2 thumbnail.jpg"/>
-                <h4 class="project_card_name">Pattern Design</h4>
-                <p>Illustrator</p>
+                <h4 class="project_card_name">Pattern Design</a></h4>
+                 <p>Illustrator</p>
             </div>
           </div>
+
           <div class="col-4">
             <div class="project_card">
+                <a href="project3.html">
                 <img class="homepage_project_image" src="images/project3_thumbnail.jpg"/>
-                <h4 class="project_card_name">Postcard Project</h4>
+               <h4 class="project_card_name">Postcard Project</a></h4>
                 <p>Illustrator</p>
             </div>
           </div>
+
            <div class="col-4">
             <div class="project_card">
-                <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name">Photoshop Collage</h4>
+                <a href="project4.html">
+                <img class="homepage_project_image" src="images/photoshop_collage_thumbnail.jpg"/>
+                <h4 class="project_card_name">Photoshop Collage</a></h4>
+                <p>Photoshop</p>
+            </div>
+          </div>
+
+           <div class="col-4">
+            <div class="project_card">
+                <a href="project5.html">
+                <img class="homepage_project_image" src="images/new_species_thumbnail.jpg"/>
+                <h4 class="project_card_name">Design a New Species</a></h4>
                 <p>Photoshop</p>
             </div>
           </div>
            <div class="col-4">
             <div class="project_card">
-                <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name">Design a New Species</h4>
-                <p>Photoshop</p>
-            </div>
-          </div>
-           <div class="col-4">
-            <div class="project_card">
+                <a href="project6.html">
                 <img class="homepage_project_image" src="images/project6_thumbnail.jpg"/>
-                <h4 class="project_card_name">Design an Alphabet</h4>
+                <h4 class="project_card_name">Design an Alphabet</a></h4>
                 <p>Photoshop</p>
             </div>
           </div>
            <div class="col-4">
             <div class="project_card">
-                <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name">Chat GPT Comic Art</h4>
-                <p>Chat GPT, Midjourney, and Photoshop)</p>
+                <a href="project7.html">
+                <img class="homepage_project_image" src="images/chat gpt comic thumbnail.jpg"/>
+                <h4 class="project_card_name">Chat GPT Comic Art</a></h4>
+                <p>Chat GPT, Midjourney, and Photoshop</p>
             </div>
           </div>
           <div class="col-4">
             <div class="project_card">
-                <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name">12 Months of Bad CGI Sharks</h4>
+                <a href="project8.html">
+                <img class="homepage_project_image" src="images/sharktime.png"/>
+                <h4 class="project_card_name">12 Months of Bad CGI Sharks</a></h4>
                 <p>Premiere Pro and GarageBand</p>
             </div>
           </div>
           <div class="col-4">
             <div class="project_card">
-                <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name">The Golden Record</h4>
+                <a href="project9.html">
+                <img class="homepage_project_image" src="images/album_art_thumbnail.jpg"/>
+                <h4 class="project_card_name">The Golden Record</a></h4>
                 <p>Audacity and Garageband</p>
             </div>
           </div>
