--- a/project3.html
+++ b/project3.html
@@ -50,7 +50,7 @@
              </div>
         <div class="row">
             <div class="col-12">
-                <img src="images/postcard2.pdf"
+                <embed src="images/postcard2.pdf"
                 class="postcard2" />
                   </div>
                 <p class="postcard2_description">Postcard 2 </p>
