--- a/project3.html
+++ b/project3.html
@@ -42,7 +42,7 @@
 
       </div>
        <div class="col-12">
-                <img src="images/postcard1.pdf"
+                <img src="images/postcard1.jpg"
                 class="postcard1"
                 />
                 </div>
@@ -50,7 +50,7 @@
              </div>
         <div class="row">
             <div class="col-12">
-                <embed src="images/postcard2.pdf"
+                <img src="images/postcard2.jpg"
                 class="postcard2" />
                   </div>
                 <p class="postcard2_description">Postcard 2 </p>
