--- a/project7.html
+++ b/project7.html
@@ -45,7 +45,7 @@
       </div>
         <div class="row">
             <div class="col-12">
-                <img src="images/comic_page1.pdf"
+                <img src="comic_page1.jpg"
                 class="comic1" />
                   </div>
     
